[gd_scene load_steps=24 format=3 uid="uid://frs4tk2mu257"]

[ext_resource type="Script" path="res://Game/Plant/Enemy/Poison.gd" id="1_f5m30"]
[ext_resource type="Texture2D" uid="uid://cyy2qbgqelcl7" path="res://Assets/2DArt/Animated_Sprites/poison.png" id="2_xh0nm"]
[ext_resource type="AudioStream" uid="uid://cr72logg400gr" path="res://Assets/Sfx/Plant/plant_fog3b.wav" id="4_grpqu"]
[ext_resource type="PackedScene" uid="uid://lu53hh2w2p7s" path="res://Assets/2DArt/VFX/PoisonVFX.tscn" id="4_xiy5u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r0bp8"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0fo1h"]
radius = 200.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mob4b"]
atlas = ExtResource("2_xh0nm")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_atriv"]
atlas = ExtResource("2_xh0nm")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp0mb"]
atlas = ExtResource("2_xh0nm")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g88mv"]
atlas = ExtResource("2_xh0nm")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbfmg"]
atlas = ExtResource("2_xh0nm")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qimlo"]
atlas = ExtResource("2_xh0nm")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_12hw1"]
atlas = ExtResource("2_xh0nm")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qut7g"]
atlas = ExtResource("2_xh0nm")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekobf"]
atlas = ExtResource("2_xh0nm")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwvgw"]
atlas = ExtResource("2_xh0nm")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gqux"]
atlas = ExtResource("2_xh0nm")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbetf"]
atlas = ExtResource("2_xh0nm")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_u168n"]
atlas = ExtResource("2_xh0nm")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_loggs"]
atlas = ExtResource("2_xh0nm")
region = Rect2(1280, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yen0g"]
atlas = ExtResource("2_xh0nm")
region = Rect2(1536, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_f03pd"]
atlas = ExtResource("2_xh0nm")
region = Rect2(1792, 256, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_vp5kt"]
animations = [{
"frames": [SubResource("AtlasTexture_mob4b"), SubResource("AtlasTexture_atriv"), SubResource("AtlasTexture_sp0mb"), SubResource("AtlasTexture_g88mv"), SubResource("AtlasTexture_nbfmg"), SubResource("AtlasTexture_qimlo"), SubResource("AtlasTexture_12hw1"), SubResource("AtlasTexture_qut7g"), SubResource("AtlasTexture_ekobf"), SubResource("AtlasTexture_iwvgw"), SubResource("AtlasTexture_2gqux"), SubResource("AtlasTexture_nbetf"), SubResource("AtlasTexture_u168n"), SubResource("AtlasTexture_loggs"), SubResource("AtlasTexture_yen0g"), SubResource("AtlasTexture_f03pd")],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Poison" type="StaticBody2D"]
collision_layer = 12
collision_mask = 99
script = ExtResource("1_f5m30")
POISON_FIELD_COLOR = Color(0.121569, 0.372549, 0.25098, 0.364706)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r0bp8")

[node name="DeathTimer" type="Timer" parent="."]

[node name="PoisonField" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PoisonField"]
shape = SubResource("CircleShape2D_0fo1h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -7)
scale = Vector2(0.4, 0.4)
frames = SubResource("SpriteFrames_vp5kt")
playing = true

[node name="PoisonPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_grpqu")
volume_db = -20.0
autoplay = true
bus = &"SFX"

[node name="PoisonVFX" parent="." instance=ExtResource("4_xiy5u")]

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
